# deep-memory

./: .gitignore  HERMES_MINIMAL_HOOKS_PLAN.md  README.md  pyproject.toml
deep-memory-plugin/: SKILL.md
src/deep_memory/: __init__.py  embedding.py  hermes_integration.py  runtime.py  session_hook.py
src/deep_memory/adapters/: __init__.py  hermes_plugin.py  hermes_tools.py
src/deep_memory/api/: __init__.py  contracts.py  service.py
src/deep_memory/reasoning/: __init__.py  consolidator.py  extractor.py  prompts.py
src/deep_memory/store/: __init__.py  db.py  schema.py  search.py
src/deep_memory/tools/: __init__.py  entities.py  learn.py  recall.py
tests/: test_adapter_layer.py  test_embedding_autoconfig.py  test_integration.py  test_reasoning.py  test_service_api.py  test_store.py  test_tools.py
