[project]
name = "deep-memory"
version = "0.1.0"
description = "Reasoning memory system for Hermes Agent"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.9"
dependencies = [
    "sqlite-vec>=0.1.6",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
